--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Raspisanie</string>
+    <string name="app_name">Расписание АГУ</string>
     <string name="card_margin">16dp</string>
 </resources>
