[+] Премиум [+] BILLING [=] Фиксы

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
 
     <string name="app_name">Расписание АГУ</string>
     <string name="card_margin">16dp</string>
+    <string name="server_client_id">646645078300-kr7b1hj5t6pdu6j4gubhee1idfr2moao.apps.googleusercontent.com</string>
+
 
 </resources>
